Sun May 20 13:59:20 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Start checks for X from pangox/pangoxft
	CFLAGS to avoid duplicate libraries.

	* gdk/Makefile.am (LDFLAGS): Remove extra -lm.

	* configure.in (GDK_PIXBUF_PACKAGES): Fix GDK_PIXBUF_PACKAGES
	to include gobject.
	
2001-05-18  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkspinbutton.c:
	Convert GtkArgs to GParams. Based on patch by John Margaglione.
	Also do size request reasonable for MAXDOUBLE. Previously it printed
	the limits to a buffer and overran it. Instead do it using log10() and
	limit the width to 10 digits.
	
	* gtk/gtkwidget.c (gtk_widget_get_property):
	Correctly handle setting the parent property to NULL.

Fri May 18 15:26:26 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_style_set): Reset 
	style attributes even if the widget isn't realized.

	* demos/gtk-demo/main.c: Use a slightly smaller font.

Fri May 18 14:25:20 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcontainer.c: Remove reallocate-redraws property.
	This is something that only a widget writer would ever want
	to change.

	* gtk/gtksignal.c: Handle G_SIGNAL_TYPE_STATIC_SCOPE for
	gtk_signal_emit_by_name().

	* gtk/gtkviewport.c: Fix some warnings.

	* gtk/gtkwidget.c gtk/gtksizegroup.c: Add "size group" facility
	allowing the requisitions of multiple widgets to be grouped
	together.

	* tests/testgtk.c: Add GtkSizeGroup test

	* demos/gtk-demo/sizegroup.c: Add GtkSizeGroup demo.

	* demos/gtk-demo/main.c demos/gtk-demo/pixbufs.c: Fix some
	warnings.

	* configure.in: Switch to using AM_GLIB_GNU_GETTEXT.

2001-04-28  Martin Baulig  <baulig@suse.de>

	* gtk/gtkimagemenuitem.[ch]: Renamed gtk_image_menu_item_add_icon()
	to gtk_image_menu_item_set_icon() and made it work if there's already
	an image.
	(gtk_image_menu_item_new): This function doesn't take any arguments anymore.
	(gtk_image_menu_item_new_with_label): New function.
